# bf-manager

./: .editorconfig  .env.example  .gitattributes  .gitignore  Caddyfile  LICENSE  Makefile  README.md  cliff.toml  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260524_0001_initial_schema.py  20260525_0002_decouple_identity_from_ea.py  20260606_0003_add_ea_account_use_count.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: deps.py  errors.py
apps/backend/app/api/v1/: admin.py  audit.py  auth.py  ea_accounts.py  ea_login_tasks.py  games.py  health.py  me.py  memberships.py  router.py
apps/backend/app/api/v1/games/: __init__.py
apps/backend/app/cli/: __init__.py  __main__.py  admin.py
apps/backend/app/core/: cache.py  config.py  logging.py  passwords.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/domain/ea/: __init__.py  account_pool.py  data_handle.py  gateway_base.py  identity.py  persona.py
apps/backend/app/domain/ea/blaze_protocol/: __init__.py  client.py  methods.py  protocol.py  socket.py
apps/backend/app/domain/ea/login/: __init__.py  exceptions.py  form_parser.py  login_engine.py  schemas.py  task_manager.py
apps/backend/app/domain/games/: README.md  __init__.py  base.py  registry.py
apps/backend/app/domain/games/bf1/: __init__.py  client_provider.py  gateway.py  maps.py  profile.py  skins.py
apps/backend/app/models/: __init__.py  audit_log.py  base.py  ea_account.py  ea_binding.py  server.py  user.py
apps/backend/app/models/bf1/: __init__.py  match_cache.py  server_admins.py  server_player_count.py
apps/backend/app/schemas/: admin.py  audit.py  auth.py  common.py  ea_account.py  game.py  membership.py
apps/backend/app/schemas/bf1/: admin.py  ban.py  overview.py  player.py  server.py  stats.py
apps/backend/app/services/: audit_service.py  auth_service.py  authz_service.py  ea_account_service.py  ea_binding_service.py  ea_login_finalizer.py  ea_login_task_service.py  game_service.py  membership_service.py  metrics_service.py  user_service.py
apps/backend/app/services/bf1/: ban_service.py  blaze_service.py  gateway_factory.py  overview_service.py  player_service.py  server_admin_service.py  server_filters.py  server_service.py  stats_service.py
apps/backend/tests/: conftest.py  migration_assert.py  migration_seed.py  test_admin_cli.py  test_audit.py  test_auth.py  test_auth_session.py  test_bf1_admin_credential_source.py  test_bf1_admin_ea_error.py  test_bf1_ban_service.py  test_bf1_binding_factory.py  test_bf1_binding_first_provider.py  test_bf1_choose_level.py  test_bf1_maps.py  test_bf1_move.py  test_bf1_my_role.py  test_bf1_overview_service.py  test_bf1_rsp_server_id.py  test_bf1_server_service.py  test_bf1_skins.py  test_bf1_stats_service.py  test_ea_account_service.py  test_ea_login_engine.py  test_ea_login_form_parser.py  test_ea_login_logging.py  test_ea_login_task_manager.py  test_health.py  test_memberships.py  test_metrics_service.py
apps/backend/tools/: seed_ea_account.py
(+129 files in other folders)
