[project]
name = "bf-manager-backend"
version = "0.0.0"
description = "Battlefield 系列战绩查询与服管平台 · FastAPI 后端"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "g1331" }]

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Redis
    "redis>=5.2.0",
    # 安全
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0",
    # HTTP 客户端（EA Gateway 调用）
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    # 日志
    "loguru>=0.7.3",
    # 工具
    "python-multipart>=0.0.19",
    "orjson>=3.10.0",
    "tenacity>=9.0.0",
    # 数据处理（武器列表 HTML 解析、地名归一化等）
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.10.0",
    "zhconv>=1.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    # 测试用 in-memory sqlite，避免依赖 postgres / redis
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "E501",     # line too long（由 formatter 处理）
    "PLR0913",  # too many arguments
    "S101",     # assert（测试中必要）
    "S105",     # hardcoded password string（误报多）
    "S106",     # hardcoded password func arg（误报多）
    "PLR2004",  # magic value
    "RUF001",   # 中文标点 vs 英文标点（中文项目中正常使用全角）
    "RUF002",   # docstring 中的中文标点
    "RUF003",   # comment 中的中文标点
    "B008",     # 函数默认值是函数调用（FastAPI Depends 模式）
    "TID252",   # 相对导入（项目内部偶尔需要）
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PL"]
"alembic/versions/**" = ["E", "F", "I", "N"]
# EA 协议封装与历史工具代码，保留原貌避免一次性大改影响功能，未来重构时再分批清理
"app/domain/ea/blaze_protocol/**" = ["E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A", "RET", "SIM", "TID", "PL", "RUF"]
"app/domain/ea/data_handle.py" = ["E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A", "RET", "SIM", "TID", "PL", "RUF"]
"app/domain/games/bf1/gateway.py" = ["E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A", "RET", "SIM", "TID", "PL", "RUF"]
"app/domain/games/bf1/maps.py" = ["E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A", "RET", "SIM", "TID", "PL", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]
